# shive

./: .gitignore  Cargo.toml  README.md
libs/shive-derive/: Cargo.toml
libs/shive-derive/src/: lib.rs
src/: error.rs  lib.rs  macros.rs  root_service_provider.rs  scoped_service_provider.rs  service.rs  service_container.rs  service_definition.rs  service_lifetime.rs  service_provider.rs
tests/: derive_service_tests.rs  service_tests.rs
